--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -7,6 +7,12 @@ body {
   margin: 0;
 }
 
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  width: 90%;
+}
+
 main {
   padding: 36px;
 }
@@ -65,6 +71,7 @@ main {
 
 .meme--image {
   max-width: 100%;
+  margin: 0 auto;
   border-radius: 3px;
 }
 
